updated Fodd papa Project

--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
- <!DOCTYPE html>
- <html lang="en">
- <head>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Papa</title>
-     <!-- Links -->
+    <!-- Links -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="./assets/img/logo/favicon.png">
@@ -22,10 +23,11 @@
     <!-- Roboto -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
- </head>
- <body>
+</head>
+
+<body>
     <!-- Nav Bar -->
-     <nav>
+    <nav>
         <div class="logo"><a href="#"><img width="250px" src="./assets/img/logo/logo.png" alt=""></a></div>
         <div class="nav-item">
             <ul>
@@ -36,42 +38,87 @@
             </ul>
         </div>
         <div class="nav-button"><button>Download Now</button></div>
-     </nav>
+    </nav>
 
-     <!-- Video -->
-      <video id="heroWebVideo" muted="" loop="" playsinline="" poster="" class="hero-video-web" autoplay=""><source src="https://d3vdg0f7o5bgl9.cloudfront.net/uploads/home_page.mp4" type="video/mp4"></video>
+    <!-- Video -->
+    <video id="heroWebVideo" muted="" loop="" playsinline="" poster="" class="hero-video-web" autoplay="" controls loop>
+        <source src="https://d3vdg0f7o5bgl9.cloudfront.net/uploads/home_page.mp4" type="video/mp4">
+    </video>
 
-      <!-- What it Matter -->
-       <div class="acc-main">
+    <!-- What it Matter -->
+    <div class="acc-main">
         <h2>What it Matters</h2>
-       <section class="anouncment">
-        <div class="item-main">
-            <div class="it-1">
-                <div class="it-logo"><img width="80px" src="https://foodpapa.com/public/assets/front/imgs/hero-2.svg" class="vibr_img" alt="Restaurant growth icon"></div>
-                <div class="it-2"><p>Every order you place <br> helps a local restaurant <br> grow</p></div>
+        <section class="anouncment">
+            <div class="item-main">
+                <div class="it-1">
+                    <div class="it-logo"><img width="80px"
+                            src="https://foodpapa.com/public/assets/front/imgs/hero-2.svg" class="vibr_img"
+                            alt="Restaurant growth icon"></div>
+                    <div class="it-2">
+                        <p>Every order you place <br> helps a local restaurant <br> grow</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item-main">
+                <div class="it-1">
+                    <div class="it-logo"><img width="80px"
+                            src="https://foodpapa.com/public/assets/front/imgs/hero-1.svg" class="vibr_img"
+                            alt="Rider support icon"></div>
+                    <div class="it-2">
+                        <p>Every delivery supports <br> a hardworking rider</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="item-main">
+                <div class="it-1">
+                    <div class="it-logo"><img width="80px"
+                            src="https://foodpapa.com/public/assets/front/imgs/hero-3.svg" class="vibr_img"
+                            alt="Digital economy icon"></div>
+                    <div class="it-2">
+                        <p>Every sign-up fuels the <br>digital economy of <br> Pakistan</p>
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+    </div>
+
+    <!-- motivation -->
+    <section class="motive">
+        <div class="motive-logo">
+            <img width="300px" src="./assets/img/logo/logo2.png" alt="">
+        </div>
+        <div class="motive-hd">
+            <h3>Born in Pakistan. Inspired by People</h3>
+        </div>
+        <div class="motive-para">
+            <p>From mega cities to hometown streets, from street legends to premium <br>
+                kitchens — Pakistan powers the taste, and Papa delivers the joy. <br>
+                Every flavor. Every craving. Everywhere.
+
+            </p>
+        </div>
+    </section>
+
+    <!-- Banner -->
+    <section class="banner">
+        <div class="left">
+            <div>
+                <h2>Whatever you’re craving. <br>
+                    Papa’s already bringing it your way.</h2>
+            </div>
+
+            <div>
+                <p>One tap is all it takes. <br>
+                    Papa handles the rest.</p>
             </div>
         </div>
+        <div ><img class="right" width="380px" height="570px" src="./assets/img/banner/mobile1.png" alt=""></div>
+    </section>
 
-         <div class="item-main">
-            <div class="it-1">
-                <div class="it-logo"><img width="80px" src="https://foodpapa.com/public/assets/front/imgs/hero-1.svg" class="vibr_img" alt="Rider support icon"></div>
-                <div class="it-2"><p>Every delivery supports <br> a hardworking rider</p></div>
-            </div>
-        </div>
+</body>
 
-        <div class="item-main">
-            <div class="it-1">
-                <div class="it-logo"><img width="80px" src="https://foodpapa.com/public/assets/front/imgs/hero-3.svg" class="vibr_img" alt="Digital economy icon"></div>
-                <div class="it-2"><p>Every sign-up fuels the <br>digital economy of <br> Pakistan</p></div>
-            </div>
-        </div>
-
-        
-       </section>
-       </div>
-
-       <!-- motivation -->
-        <section class="motive"></section>
-    
- </body>
- </html>
+</html>
